# automl-platform

./: .dockerignore  .env.example  .env.production  .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README-DOCKER.md  README.md  app.py  automl_platform:__init__.py  automl_platform:orchestrator.py  config.py  config.yaml  config_yaml.txt  database.py  dependency_manifest.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  dockerfile.gpu  dockerfile.mlflow  dockerfile.saas  env.py  generate_requirements.py  gitignore_file.txt  index.html  inference.py  install_mlops.sh  main.py  makefile  metrics.py  migrate_add_agents.py  model_selection.py  mon_script.py  package.json  pyproject.toml  pytest.ini  (+11 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: README-alembic.md  env.py
alembic/versions/: 2132f54246f2_init.py
automl-frontend/: package-lock.json  package.json  tsconfig.app.json
automl-frontend/public/: README.md
automl-frontend/src/: App.tsx  axelle-prelaunch.jsx
automl_core/: __init__.py
automl_core/automl_core/: rgpd_compliance_service.py
automl_platform/: __init__.py  ab_testing.py  app.py  audit_service.py  auth.py  auth_endpoints.py  auth_middleware.py  autoscaling.py  billing_middleware.py  config.py  data_prep.py  data_quality_agent.py  database.py  deployment.py  distributed_training.py  enhanced_orchestrator.py  ensemble.py  export_service.py  feature_engineering.py  incremental_learning.py  inference.py  llm.py  metrics.py  mlflow_registry  mlflow_registry.py  mlops_service.py  model_selection.py  monitoring.py  orchestrator.py  pipeline_cache.py  plans.py  prompts  prompts.py  retraining_service.py  rgpd_compliance_service.py  risk.py  safe_code_execution.py  scheduler.py  sso_service.py  storage.py  (+5 more)
automl_platform/agents/: __init__.py  adaptive_template_system.py  agent_config.py  cleaner_agent.py  controller_agent.py  data_cleaning_orchestrator.py  intelligent_config_generator.py  intelligent_context_detector.py  intelligent_data_cleaning.py  profiler_agent.py  unified_cleaning.py  universal_ml_agent.py  utils.py  validator_agent.py  yaml_config_handler.py
automl_platform/agents/prompts/: __init__.py  cleaner_prompts.py  controller_prompts.py  profiler_prompts.py  validator_prompts.py
automl_platform/api/: __init__.py  api.py  app.py  batch_inference.py  billing.py  billing_middleware.py  billing_routes.py  connectors.py  feature_store.py  infrastructure.py  llm_endpoints.py  mlops_endpoints.py  model_versioning.py  streaming.py  websocket.py
automl_platform/core/: __init__.py  config_manager.py  health_monitor.py  service_registry.py
automl_platform/examples/: example_mlops_integration.py  example_readme.md  example_rgpd_service.py  example_sso_auth.py  example_sso_service.py  example_streaming_realtime.py  example_ui_streaming.py
automl_platform/models/: __init__.py  base.py  tenant.py
automl_platform/templates/: template_loader.py
automl_platform/templates/use_cases/: churn_prediction.yaml  credit_scoring.yaml  fraud_detection.yaml  recommendation_system.yaml  sales_forecasting.yaml
automl_platform/ui/: __init__.py  components.py  dashboard.py  streamlit_app.py  ui_metrics.py
automl_platform/ui/pages/: wizard.py
automl_platform/ui/utils/: __init__.py  data_sources.py
core/: __init__.py  rgpd_compliance_service.py
core_facade/: __init__.py
docs/: codeowners.md  connectors_guide.md  connectors_setup_guide.md  deployment_guide.md  migration_risk_level_enum.md  prod_usage_guide.md  release_notes.md  rgpd_compliance_issues.md  template_guide.md
examples/: example_data_preprocessing.py  example_intelligent_cleaning.py  example_readme.md  example_rgpd_service.py  example_sso_auth.py  example_ui_streamlit.py  intelligent_cleaning.py
grafana/dashboards/: automl_dashboard.json  dashboard.json
grafana/datasources/: prometheus.yaml
keycloak/: realm-export.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: automl-overview.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/ssl/: README.md
reports/: inconsistencies.md
scripts/: backup.sh  deploy_saas.sh  generate-secrets.sh  init-multi-db.sh  run_migrations.sh  start_saas.sh  wait-for-it.sh
tests/: __init__.py  conftest.py  rgpd_compliance_service.py  test_ab_testing.py  test_agents.py  test_api.py  test_audit_service.py  test_auth.py  test_auth_endpoints.py  test_auth_middleware.py  test_billing.py  test_billing_middleware_auth_fallback.py  test_billing_routes_import.py  test_config_manager.py  test_connectors.py  test_data_prep.py  test_data_quality_agent.py  test_ensemble.py  test_export_service.py  test_health_monitor.py  test_incremental_learning.py  test_llm_backward_compat.py  test_metrics.py  test_mlflow_registry.py  test_mlops_endpoints.py  test_mlops_service.py  test_model_selection.py  test_monitoring.py  test_orchestrator.py  test_plans.py  test_prompts.py  test_retraining_service.py  test_scheduler.py  test_service_registry.py  test_sso_service.py  test_storage.py  test_streaming.py  test_tabnet_sklearn.py  test_tenant_manager.py  test_ui.py  (+5 more)
tests/fixtures/: legacy_data_quality_assessment.json
tests/stubs/streamlit_stub/: __init__.py  errors.py
tests/ui/: test_data_sources.py
